distinct list handling/test