@@ -12,8 +12,20 @@ import org.icgc.argo.workflow_management.wes.model.WorkflowEngineParams;
 import org.icgc.argo.workflow_management.wes.properties.NextflowProperties;
 
 public class VolumeMounts {
-  public static List<String> extract(@NonNull List<String> volMounts, @NonNull String path) {
-    return extract(volMounts, List.of(path));
+  public static List<String> extract(
+      NextflowProperties.K8sProperties k8sProperties, WorkflowEngineParams workflowEngineParams) {
+    return Optional.ofNullable(k8sProperties.getVolMounts())
+        .map(
+            volMounts ->
+                extract(
+                    volMounts,
+                    Stream.of(
+                            workflowEngineParams.getLaunchDir(),
+                            workflowEngineParams.getProjectDir(),
+                            workflowEngineParams.getWorkDir())
+                        .filter(Objects::nonNull)
+                        .collect(Collectors.toList())))
+        .orElse(Collections.emptyList());
   }
 
   public static List<String> extract(@NonNull List<String> volMounts, @NonNull List<String> paths) {
@@ -35,22 +47,13 @@ public class VolumeMounts {
                                 Pattern.compile("^" + Pattern.quote(volMount.split(":")[1]))
                                     .matcher(path)
                                     .find()))
+            // volMounts need to be provided as a list,
+            // however we only care about distinct values
+            .distinct()
             .collect(Collectors.toList());
   }
 
-  public static List<String> extract(
-      NextflowProperties.K8sProperties k8sProperties, WorkflowEngineParams workflowEngineParams) {
-    return Optional.ofNullable(k8sProperties.getVolMounts())
-        .map(
-            volMounts ->
-                extract(
-                    volMounts,
-                    Stream.of(
-                            workflowEngineParams.getLaunchDir(),
-                            workflowEngineParams.getProjectDir(),
-                            workflowEngineParams.getWorkDir())
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toList())))
-        .orElse(Collections.emptyList());
+  public static List<String> extract(@NonNull List<String> volMounts, @NonNull String path) {
+    return extract(volMounts, List.of(path));
   }
 }
